--- a/www/style-zero.linux.css
+++ b/www/style-zero.linux.css
@@ -5067,8 +5067,8 @@ div > .MJXc-display {
 		}
 	
 		.sublevel-nav.sort {
-			top: 315px;
-			right: 10px;
+			top: 300px;
+			right: 8px;
 		}
 
 		.comment-item .comment-item {
